dohpaZ (19/03/02)
------------------
Modifications:
 + Tweaked showeq.conf.dist to remove an outdated statement
 + Tweaked the help to correct some entries
 + identified animation field in spawnStruct
 + EQ 19/03/02 Patch fix for "racing"/"raining" PC problem 
   (notification to client that server is not sending more position updates)".

dohpaZ (18/03/02)
------------------
Modifications:
 + Map optimizations.  Switched from using {QPixmap, QWidget}::drawPixmap() to 
   bitBlt() for copying pixmap data around and to screen.  Also, cache 
   the item->filterFlags() value on the stack for slightly faster access.
   The bitBlt optimization MAY help those seeing lockups.
 + Changed default spawn save frequency, and updated showeq.conf.dist to 
   reflect the new default (saves spawns every 60 seconds).
 + Optimized how spawn information was saved and added a magic number to the
   beginning of it's file
 + Added FOV Mode selection to the map, with three options: 
   Distance Based (default), Scaled Classic, and Classic.  This controls the
   style of player background/field of view display
   + "Distance Based" where its size is based on an actual distance 
     along a horizontal plane from the player.
   + "Scaled Classic" where its size is based on the classic formula 
     a simple scale applied to compensate for zoom.
   + "Classic" where the size uses the old, meaningless, non-scaled classic
     formula.

dohpaZ (17/03/02)
------------------
Modifications:
 + Made FOV distance configurable in map units (defaults to 200 units), and
   also made FOV color and fill pattern style be configurable
 + Added options to the map menu to allow the configuration of the 
   FOV parameters as well as the base spawn DrawSize
 + Cleaned up all the code that uses FOV, and pre-calculate the scale in 
   Map::reAdjust()
 + Minor map optimizations (pre-calculate common draw size derivatives)
 + Added more information to the Network Diagnostics dialog