@@ -223,6 +223,9 @@ CombatWindow::CombatWindow(EQPacket* p)
   m_dDPS(0.0),
   m_dDPSLast(0.0)
 {
+   QString section = "Combat";
+   setCaption(pSEQPrefs->getPrefString("Title", section, "ShowEQ Combat"));
+
   /* Hopefully this is only called once to set up the window,
      so this is a good place to initialize some things which
      otherwise won't be. */
